# pyquantifier

./: .gitignore  LICENSE  README.md  Sec0-Data-Generating.ipynb  Sec1-Joint-Distribution-And-Naive-Approach.ipynb  Sec2-Labeled-Sample-To-Calibration .ipynb  Sec3-Extrapolating-To-Target-Dataset-Joint-Distribution.ipynb  Sec4-End-To-End-Example1.ipynb  Sec4-Sensitivity-To-Assumptions.ipynb  Sec5-End-To-End-Example.ipynb  Sec5-Example.ipynb  hot_estimator.py  pyproject.toml  requirements.txt  util.py
.ipynb_checkpoints/: Sec0-Data-Generating-checkpoint.ipynb  Sec1-Joint-Distribution-And-Naive-Approach-checkpoint.ipynb  Sec2-Labeled-Sample-To-Calibration -checkpoint.ipynb
calibration_extrapolation/: calibration_curve.py  class_conditional_density.py  classifier_density.py  conf.py  data_generator.py  data_handler.py  density_estimator.py  extrinsic_estimator.py  intrinsic_estimator.py  joint_density.py  label_density.py  mixture_distribution.py  util.py
data/: dataset2_base.csv  dataset2_target.csv  dataset3_base.csv  dataset3_target.csv  dataset4_base.csv  dataset4_target.csv  dataset5_base.csv  dataset5_target.csv
examples/: Joint dist generator.ipynb  New_Sec0-Data-Generating.ipynb  Sec0-Data-Generating.ipynb  Sec1-Joint-Distribution-And-Naive-Approach.ipynb  Sec3-Extrapolating-To-Target-Dataset-Joint-Distribution.ipynb  generate_figma_figs.ipynb  paper_sec4.ipynb  selection_of_items.ipynb  tutorial.ipynb
hot_speech/: calibration_curve.pkl  data_visualization.ipynb  extrinsic_hot_prevalence_estimation_2022.csv  hot_cached_dists.pkl  hot_estimator.py  (+4 more)
(+45 files in other folders)
